@@ -123,7 +123,7 @@ set TZData(:Africa/Cairo) {
     {1250802000 7200 0 EET}
     {1272578400 10800 1 EEST}
     {1281474000 7200 0 EET}
-    {1283983200 10800 1 EEST}
+    {1284069600 10800 1 EEST}
     {1285880400 7200 0 EET}
     {1304028000 10800 1 EEST}
     {1317330000 7200 0 EET}
